# page-counter

./: .gitignore  CMakeLists.txt  README.md  distribute  main.c  notes.txt  page_counter.c  page_counter.h  test.txt  ttf_reader.c  ttf_reader.h  utils.c  utils.h
include/: ttf.c  ttf.h
